--- a/ELE.web/WebRoot/WEB-INF/reports/plantilla_CO_FT_208.jrxml
+++ b/ELE.web/WebRoot/WEB-INF/reports/plantilla_CO_FT_208.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="plantilla_CO-FT-172" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
-	<property name="ireport.zoom" value="1.4641000000000053"/>
+	<property name="ireport.zoom" value="1.6105100000000074"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.y" value="31"/>
 	<parameter name="zona" class="java.lang.String"/>
 	<parameter name="fechaActual" class="java.util.Date"/>
 	<parameter name="comision" class="java.lang.String"/>
@@ -22,17 +22,17 @@
 	<title>
 		<band height="79" splitType="Stretch">
 			<rectangle>
-				<reportElement x="-21" y="-21" width="595" height="100" forecolor="#7D933C" backcolor="#7D933C"/>
+				<reportElement x="-21" y="-21" width="595" height="100" forecolor="#7D933C" backcolor="#009232"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="0" y="12" width="555" height="25" forecolor="#FFFFFF"/>
+				<reportElement x="0" y="8" width="555" height="25" forecolor="#FFFFFF"/>
 				<textElement textAlignment="Center" markup="none">
 					<font size="15" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Elección de Delegados 2017-2020]]></text>
+				<text><![CDATA[Elección de Delegados]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="0" y="47" width="555" height="20" forecolor="#FFFFFF"/>
+				<reportElement x="0" y="39" width="555" height="20" forecolor="#FFFFFF"/>
 				<textElement textAlignment="Center" markup="none">
 					<font size="15" isBold="true"/>
 				</textElement>
@@ -60,21 +60,21 @@
 				<reportElement x="430" y="1" width="1" height="31" forecolor="#000000"/>
 			</line>
 			<staticText>
-				<reportElement x="49" y="5" width="84" height="14" forecolor="#000000"/>
+				<reportElement x="52" y="5" width="84" height="14" forecolor="#009232"/>
 				<textElement markup="none">
 					<font size="8"/>
 				</textElement>
 				<text><![CDATA[Zonal Electoral No.]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="305" y="5" width="29" height="14" forecolor="#000000"/>
+				<reportElement x="301" y="5" width="29" height="14" forecolor="#009232"/>
 				<textElement markup="none">
 					<font size="8"/>
 				</textElement>
 				<text><![CDATA[Fecha]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="431" y="5" width="26" height="14" forecolor="#000000"/>
+				<reportElement x="433" y="5" width="26" height="14" forecolor="#009232"/>
 				<textElement markup="none">
 					<font size="8"/>
 				</textElement>
@@ -84,7 +84,7 @@
 				<reportElement x="50" y="1" width="470" height="4" forecolor="#000000" backcolor="#000000"/>
 			</rectangle>
 			<textField isBlankWhenNull="true">
-				<reportElement x="133" y="12" width="161" height="20"/>
+				<reportElement x="51" y="10" width="244" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Bottom"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{zona}]]></textFieldExpression>
 			</textField>
@@ -107,13 +107,13 @@
 	<detail>
 		<band height="258" splitType="Stretch">
 			<rectangle>
-				<reportElement x="49" y="0" width="471" height="205" forecolor="#000000"/>
+				<reportElement x="49" y="0" width="471" height="242" forecolor="#000000"/>
 			</rectangle>
 			<rectangle>
 				<reportElement x="50" y="0" width="470" height="4" forecolor="#000000" backcolor="#000000"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="84" y="163" width="126" height="24" forecolor="#000000"/>
+				<reportElement x="71" y="163" width="126" height="24" forecolor="#000000"/>
 				<textElement>
 					<font size="7"/>
 				</textElement>
@@ -121,7 +121,7 @@
 C.C:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="334" y="163" width="145" height="24" forecolor="#000000"/>
+				<reportElement x="300" y="163" width="145" height="24" forecolor="#000000"/>
 				<textElement>
 					<font size="7"/>
 				</textElement>
@@ -129,146 +129,91 @@ C.C:]]></text>
 C.C]]></text>
 			</staticText>
 			<line>
-				<reportElement x="71" y="162" width="184" height="1" forecolor="#000000"/>
+				<reportElement x="71" y="162" width="200" height="1" forecolor="#000000"/>
 			</line>
 			<line>
-				<reportElement x="316" y="161" width="184" height="1" forecolor="#000000"/>
+				<reportElement x="300" y="161" width="200" height="1" forecolor="#000000"/>
 			</line>
-			<rectangle>
-				<reportElement x="-21" y="205" width="595" height="32" forecolor="#7D933C" backcolor="#7D933C"/>
-			</rectangle>
 			<staticText>
-				<reportElement x="50" y="211" width="470" height="20" forecolor="#FFFFFF"/>
-				<textElement textAlignment="Center">
-					<font size="14" isBold="true"/>
-				</textElement>
-				<text><![CDATA[Tribunal de Elecciones y Escrutinios]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="50" y="238" width="100" height="20" forecolor="#000000"/>
-				<textElement/>
-				<text><![CDATA[CO-FT-208]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="418" y="238" width="100" height="20" forecolor="#000000"/>
-				<textElement textAlignment="Right"/>
-				<text><![CDATA[Mod.Agosto.2016]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="71" y="4" width="429" height="78" forecolor="#000000"/>
-				<textElement lineSpacing="1_1_2">
-					<font size="9"/>
-				</textElement>
-				<text><![CDATA[La Comisión Electoral No. ________ de la ciudad de ______________________________________
-expide Constancia de Recibo y radicación de la Plancha encabezada por ______________________
-identificado con cédula de ciudadanía número _____________________ de____________________
-el día __________ del mes de ____________________________ del año __________ .]]></text>
-			</staticText>
-			<textField isBlankWhenNull="true">
-				<reportElement x="180" y="4" width="30" height="20"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font size="8"/>
-				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA[$P{comision}]]></textFieldExpression>
-			</textField>
-			<textField isBlankWhenNull="true">
-				<reportElement x="289" y="6" width="212" height="20"/>
-				<textElement textAlignment="Center" verticalAlignment="Top">
-					<font size="8"/>
-				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA[$P{ciudad}]]></textFieldExpression>
-			</textField>
-			<textField isBlankWhenNull="true">
-				<reportElement x="366" y="24" width="152" height="13"/>
-				<textElement verticalAlignment="Top">
-					<font size="8"/>
-				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA[$P{nombre}]]></textFieldExpression>
-			</textField>
-			<textField isBlankWhenNull="true">
-				<reportElement x="255" y="35" width="100" height="17"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle" rotation="None">
-					<font size="8"/>
-				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA[$P{cedula}]]></textFieldExpression>
-			</textField>
-			<textField isBlankWhenNull="true">
-				<reportElement x="369" y="31" width="149" height="22"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font size="8"/>
-				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA[$P{ciudadCedula}]]></textFieldExpression>
-			</textField>
-			<textField isBlankWhenNull="true">
-				<reportElement x="94" y="55" width="53" height="13"/>
-				<textElement textAlignment="Center" verticalAlignment="Top">
-					<font size="8"/>
-				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA[$P{dia}]]></textFieldExpression>
-			</textField>
-			<textField isBlankWhenNull="true">
-				<reportElement x="195" y="55" width="121" height="13"/>
-				<textElement textAlignment="Center">
-					<font size="8"/>
-				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA[$P{mes}]]></textFieldExpression>
-			</textField>
-			<textField isBlankWhenNull="true">
-				<reportElement x="360" y="54" width="47" height="14"/>
-				<textElement textAlignment="Center" verticalAlignment="Top">
-					<font size="8"/>
-				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA[$P{anio}]]></textFieldExpression>
-			</textField>
-			<staticText>
-				<reportElement x="39" y="0" width="10" height="205" forecolor="#000000"/>
+				<reportElement x="39" y="0" width="10" height="242" forecolor="#009232"/>
 				<textElement textAlignment="Center" rotation="Left">
-					<font size="5"/>
+					<font size="6"/>
 				</textElement>
 				<text><![CDATA[Vigilada por la Superintendencia de la Economia Solidaria NIT.: 890.300.625-1]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="71" y="89" width="184" height="12" forecolor="#000000"/>
-				<textElement>
+				<reportElement x="71" y="89" width="200" height="15" forecolor="#000000"/>
+				<textElement textAlignment="Center">
 					<font size="7"/>
 				</textElement>
 				<text><![CDATA[Nombre(s) y Apellido(s) de quien presenta la Plancha]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="289" y="89" width="212" height="12" forecolor="#000000"/>
-				<textElement>
+				<reportElement x="300" y="89" width="200" height="15" forecolor="#000000"/>
+				<textElement textAlignment="Center">
 					<font size="7"/>
 				</textElement>
 				<text><![CDATA[Nombre(s) y Apellido (s) de quien recibe y radica la Plancha
 ]]></text>
 			</staticText>
 			<line>
-				<reportElement x="71" y="126" width="173" height="1" forecolor="#000000"/>
+				<reportElement x="71" y="127" width="200" height="1" forecolor="#000000"/>
 			</line>
 			<line>
-				<reportElement x="289" y="127" width="211" height="1" forecolor="#000000"/>
+				<reportElement x="300" y="127" width="200" height="1" forecolor="#000000"/>
 			</line>
 			<staticText>
-				<reportElement x="71" y="187" width="386" height="20" forecolor="#000000"/>
+				<reportElement x="71" y="204" width="429" height="20" forecolor="#000000"/>
 				<textElement>
-					<font size="8" isBold="false"/>
+					<font size="10" isBold="false"/>
 				</textElement>
 				<text><![CDATA[Nota: La entrega de esta constancia no significa la Admisión y Aceptación de la Plancha.]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="71" y="108" width="173" height="20"/>
+				<reportElement x="71" y="108" width="200" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font size="8"/>
+					<font size="10"/>
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{nombreEntrega}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="289" y="108" width="212" height="20"/>
+				<reportElement x="300" y="108" width="201" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font size="8"/>
+					<font size="10"/>
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{nombreRecibe}]]></textFieldExpression>
 			</textField>
+			<textField>
+				<reportElement x="70" y="15" width="430" height="60"/>
+				<textElement>
+					<font size="10"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA["La Comisión Electoral o Comite Auxiliar  de la ciudad de " +$P{ciudad}+ " expide constancia de recibo y radicación de la Plancha encabezada por " +$P{nombre}.toUpperCase()+ " identificado  con cédula de ciudadanía número " +$P{cedula}+ " de " +$P{ciudadCedula}.toUpperCase()+ ", el día " +$P{dia}+ " del mes de " +$P{mes}+ " del año " +$P{anio}+ "."]]></textFieldExpression>
+			</textField>
 		</band>
 	</detail>
+	<pageFooter>
+		<band height="54">
+			<rectangle>
+				<reportElement x="-21" y="0" width="595" height="32" forecolor="#7D933C" backcolor="#009232"/>
+			</rectangle>
+			<staticText>
+				<reportElement x="0" y="6" width="555" height="20" forecolor="#FFFFFF"/>
+				<textElement textAlignment="Center">
+					<font size="14" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Tribunal de Elecciones y Escrutinios]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="50" y="33" width="100" height="20" forecolor="#009232"/>
+				<textElement/>
+				<text><![CDATA[CO-FT-208]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="374" y="33" width="144" height="20" forecolor="#009232"/>
+				<textElement textAlignment="Right"/>
+				<text><![CDATA[Mod.Septiembre 2021]]></text>
+			</staticText>
+		</band>
+	</pageFooter>
 </jasperReport>
