--- a/ELE.web/WebRoot/gui/forms/enviarRadicacion.jspx
+++ b/ELE.web/WebRoot/gui/forms/enviarRadicacion.jspx
@@ -91,7 +91,7 @@ body {
 									<td>
 										<div align="center">
 											<ice:panelCollapsible expanded="true" toggleOnClick="false"
-												style="width:80%">
+												style="width:80%" rendered="#{not enviarRadicacionVista.existeEnvioRadicacion}">
 												<f:facet name="header">
 													<ice:outputText id="ttlOpcionesFirma"
 														value="#{etiquetas.lblTipoFirma}" />
@@ -99,8 +99,7 @@ body {
 												<ice:outputText value="#{etiquetas.textInfoEnvioRadicacion}" />
 												<ice:panelGrid columns="1" width="45%"
 													styleClass="textoLabel">
-													<ice:selectOneRadio
-														value="#{enviarRadicacionVista.opcionFirma}"
+													<ice:selectOneRadio value="#{enviarRadicacionVista.opcionFirma}"
 														valueChangeListener="#{enviarRadicacionVista.action_cambioDeFirma}">
 														<f:selectItems
 															value="#{enviarRadicacionVista.listaOpcionFirma}" />
@@ -110,41 +109,33 @@ body {
 										</div>
 									</td>
 								</tr>
-								<tr>
+								
+								<tr >
 									<td>
 										<div align="center">
 											<ice:panelCollapsible expanded="true" toggleOnClick="false"
-												style="width:80%">
+												style="width:80%" rendered="#{enviarRadicacionVista.existeEnvioRadicacion}">
 												<f:facet name="header">
 													<ice:outputText id="ttlDetallePendientes"
-														value="#{etiquetas.lblDetallePendientes}" />
+														value="#{etiquetas.lblTipoFirma}" />
 
 												</f:facet>
-												<ice:outputText value="#{etiquetas.textInfoEnvioRadicacion}" />
-
-												<ice:dataTable id="tblPendientes" var="observaciones"
-													value="#{enviarRadicacionVista.pendientes.observacionesInhabilidades}"
-													style="width:100%; height:100%;align:center">
-
-													<ice:column>
-														<center>
-															<ice:inputText value="#{observaciones}"
-																partialSubmit="false" style="width:100%;"
-																styleClass="textoLabel" readonly="true" />
-														</center>
-													</ice:column>
-												</ice:dataTable>
-
+												<ice:outputText value="#{etiquetas.txtFirmaRadicada}" />
 											</ice:panelCollapsible>
 										</div>
 									</td>
-								</tr>
+								</tr>  
+								
 								<tr>
 									<td>
 										<center>
 											<br />
 											<ice:commandButton value="#{etiquetas.btnEnviarRadicacion}"
-												disabled="#{enviarRadicacionVista.existenPendientes}" />
+												action="#{enviarRadicacionVista.action_enviarRadicacion}"
+												disabled="#{enviarRadicacionVista.existeEnvioRadicacion}"
+												styleClass="boton" />
+									
+									
 										</center>
 									</td>
 								</tr>
@@ -159,6 +150,83 @@ body {
 
 			<jsp:directive.include
 				file="../popup/popupMensajeExcepcionPlanchas.jsp" />
+
+			<ice:panelPopup id="mensajeCabeza" draggable="true"
+				styleClass="formulario"
+				visible="#{enviarRadicacionVista.mensajeIngreso}" modal="true"
+				style="z-index: 50000; top: 30%; left: 35%; position: absolute; width: 280px;">
+
+				<f:facet name="header">
+					<ice:panelGrid width="100%" cellpadding="0" cellspacing="0"
+						style="text-align: center;" headerClass="icePanelPopupHeader">
+						<ice:outputText style="color: #FFFFFF;" value="Mensaje" />
+					</ice:panelGrid>
+				</f:facet>
+
+				<f:facet name="body">
+					<ice:panelGrid width="100%" cellpadding="0" cellspacing="0"
+						styleClass="font: 11px / 17px tahoma;">
+						<center>
+							<ice:outputText
+								value="#{enviarRadicacionVista.mensajeIngresoInfoEnviarRadicacion}"
+								styleClass="textoLabel" />
+						</center>
+						<br />
+						<br />
+						<table border="0" align="center" cellpadding="0" cellspacing="0"
+							background="">
+							<tr>
+								<th width="70px" align="center" style="color: #D4D4D4"><ice:commandButton
+										image="../imagenes/boton_salir.gif"
+										action="#{enviarRadicacionVista.action_cerrar_mensaje_ingreso}" />
+								</th>
+							</tr>
+							<tr>
+							</tr>
+						</table>
+					</ice:panelGrid>
+				</f:facet>
+			</ice:panelPopup>
+
+			<ice:panelPopup id="mensajeInformativoCabeza" draggable="true"
+				styleClass="formulario"
+				visible="#{enviarRadicacionVista.mensajeInformativo}" modal="true"
+				style="z-index: 50000; top: 30%; left: 35%; position: absolute; width: 280px; height: auto;">
+				
+				<f:facet name="header">
+					<ice:panelGrid width="100%" cellpadding="0" cellspacing="0"
+						style="text-align: center;" headerClass="icePanelPopupHeader">
+						<ice:outputText style="color: #FFFFFF;" value="Mensaje" />
+					</ice:panelGrid>
+				</f:facet>
+				
+				<f:facet name="body">
+					<ice:panelGrid width="100%" cellpadding="0" cellspacing="0"
+						styleClass="font: 11px / 17px tahoma;">
+						<center>
+							<ice:outputText
+								value="#{enviarRadicacionVista.mensajeIngresoInfoEnviarRadicacion}"
+								styleClass="textoLabel" />
+							<!-- <ice:outputText value="#{etiquetas.lblMensajeInfoCabezaPlancha}" styleClass="textoLabel"/>-->
+						</center>
+						<br />
+						<br />
+						<table border="0" align="center" cellpadding="0" cellspacing="0"
+							background="">
+							<tr>
+								<th width="70px" align="center" style="color: #D4D4D4"><ice:commandButton
+										image="../imagenes/boton_salir.gif"
+										action="#{enviarRadicacionVista.action_cerrar_mensaje_informativo}" />
+								</th>
+							</tr>
+							<tr>
+							</tr>
+						</table>
+					</ice:panelGrid>
+				</f:facet>
+			</ice:panelPopup>
+
+
 		</div>
 	</ice:form>
 </body>
