--- a/ELE.web/WebRoot/WEB-INF/reports/plantilla_CO_FT_176.jrxml
+++ b/ELE.web/WebRoot/WEB-INF/reports/plantilla_CO_FT_176.jrxml
@@ -1,41 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="plantilla_CO-FT-172" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
-	<property name="ireport.zoom" value="1.610510000000003"/>
+	<property name="ireport.zoom" value="1.9487171000000083"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="702"/>
-	<parameter name="nombre" class="java.lang.String"/>
-	<parameter name="plancha" class="java.lang.String"/>
-	<parameter name="nombreRepresen" class="java.lang.String"/>
-	<parameter name="rutaImagen" class="java.lang.String"/>
-	<parameter name="1SI" class="java.lang.String"/>
-	<parameter name="1NO" class="java.lang.String"/>
-	<parameter name="2SI" class="java.lang.String"/>
-	<parameter name="2NO" class="java.lang.String"/>
-	<parameter name="3SI" class="java.lang.String"/>
-	<parameter name="3NO" class="java.lang.String"/>
-	<parameter name="4SI" class="java.lang.String"/>
-	<parameter name="4NO" class="java.lang.String"/>
-	<parameter name="5SI" class="java.lang.String"/>
-	<parameter name="5NO" class="java.lang.String"/>
-	<parameter name="6SI" class="java.lang.String"/>
-	<parameter name="6NO" class="java.lang.String"/>
-	<parameter name="7SI" class="java.lang.String"/>
-	<parameter name="7NO" class="java.lang.String"/>
-	<parameter name="8SI" class="java.lang.String"/>
-	<parameter name="8NO" class="java.lang.String"/>
-	<parameter name="9SI" class="java.lang.String"/>
-	<parameter name="9NO" class="java.lang.String"/>
-	<parameter name="10SI" class="java.lang.String"/>
-	<parameter name="10NO" class="java.lang.String"/>
-	<parameter name="11SI" class="java.lang.String"/>
-	<parameter name="11NO" class="java.lang.String"/>
-	<parameter name="12SI" class="java.lang.String"/>
-	<parameter name="12NO" class="java.lang.String"/>
+	<property name="ireport.y" value="844"/>
+	<parameter name="annio" class="java.lang.String"/>
+	<parameter name="mes" class="java.lang.String"/>
+	<parameter name="dia" class="java.lang.String"/>
+	<parameter name="zonaElectoral" class="java.lang.String"/>
+	<parameter name="nombreAsociado" class="java.lang.String"/>
+	<parameter name="cedulaAsociado" class="java.lang.String"/>
+	<parameter name="ciudad" class="java.lang.String"/>
+	<parameter name="observaciones" class="java.lang.String">
+		<defaultValueExpression><![CDATA[null]]></defaultValueExpression>
+	</parameter>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="79" splitType="Stretch">
+		<band height="85" splitType="Stretch">
 			<rectangle>
 				<reportElement x="-21" y="-21" width="595" height="100" forecolor="#009205" backcolor="#009205"/>
 			</rectangle>
@@ -56,7 +38,7 @@
 		</band>
 	</title>
 	<pageHeader>
-		<band height="66" splitType="Stretch">
+		<band height="70" splitType="Stretch">
 			<rectangle>
 				<reportElement x="0" y="4" width="410" height="20"/>
 			</rectangle>
@@ -70,155 +52,219 @@
 				<reportElement x="410" y="4" width="145" height="20"/>
 			</rectangle>
 			<rectangle>
-				<reportElement x="454" y="24" width="58" height="20"/>
-			</rectangle>
-			<rectangle>
 				<reportElement x="0" y="0" width="555" height="4" forecolor="#000000" backcolor="#000000"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="467" y="4" width="42" height="20" forecolor="#00834C"/>
-				<textElement/>
+				<reportElement x="415" y="4" width="135" height="20" forecolor="#00834C"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font size="10"/>
+				</textElement>
 				<text><![CDATA[Fecha]]></text>
 			</staticText>
 			<rectangle>
 				<reportElement x="512" y="24" width="43" height="20"/>
 			</rectangle>
 			<rectangle>
-				<reportElement x="410" y="24" width="44" height="20"/>
+				<reportElement x="410" y="24" width="55" height="20"/>
 			</rectangle>
 			<rectangle>
 				<reportElement x="410" y="44" width="145" height="20"/>
 			</rectangle>
+			<staticText>
+				<reportElement x="7" y="4" width="155" height="20" forecolor="#009232"/>
+				<textElement verticalAlignment="Middle">
+					<font size="10"/>
+				</textElement>
+				<text><![CDATA[Zonal Electoral No.]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="6" y="24" width="156" height="20" forecolor="#009232"/>
+				<textElement verticalAlignment="Middle">
+					<font size="10"/>
+				</textElement>
+				<text><![CDATA[Nombre del Cabeza de Plancha]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="7" y="44" width="155" height="20" forecolor="#009232"/>
+				<textElement verticalAlignment="Middle">
+					<font size="10"/>
+				</textElement>
+				<text><![CDATA[Cedula de Ciudadanía]]></text>
+			</staticText>
 			<textField>
-				<reportElement x="10" y="4" width="238" height="20"/>
+				<reportElement x="164" y="4" width="246" height="20"/>
 				<textElement verticalAlignment="Middle"/>
-				<textFieldExpression class="java.lang.String"><![CDATA["Zonal Electoral No."]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{zonaElectoral}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="10" y="24" width="397" height="20"/>
+				<reportElement x="164" y="24" width="246" height="20"/>
 				<textElement verticalAlignment="Middle"/>
-				<textFieldExpression class="java.lang.String"><![CDATA["Nombre del Cabeza de Plancha " + $P{nombre}.toUpperCase()]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{nombreAsociado}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="10" y="44" width="397" height="20"/>
+				<reportElement x="164" y="45" width="246" height="20"/>
 				<textElement verticalAlignment="Middle"/>
-				<textFieldExpression class="java.lang.String"><![CDATA["Cedula de Ciudadanía "]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{cedulaAsociado}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="412" y="24" width="42" height="20"/>
-				<textElement textAlignment="Justified" verticalAlignment="Middle"/>
-				<textFieldExpression class="java.lang.String"><![CDATA["Año"]]></textFieldExpression>
+				<reportElement x="412" y="24" width="53" height="20"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{annio}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="455" y="24" width="57" height="20"/>
-				<textElement textAlignment="Justified" verticalAlignment="Middle"/>
-				<textFieldExpression class="java.lang.String"><![CDATA["Mes"]]></textFieldExpression>
+				<reportElement x="465" y="25" width="47" height="20"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{mes}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="512" y="24" width="43" height="20"/>
-				<textElement textAlignment="Justified" verticalAlignment="Middle"/>
-				<textFieldExpression class="java.lang.String"><![CDATA["Día"]]></textFieldExpression>
+				<reportElement x="512" y="25" width="43" height="20"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{dia}]]></textFieldExpression>
 			</textField>
 		</band>
 	</pageHeader>
 	<detail>
-		<band height="579" splitType="Stretch">
+		<band height="569" splitType="Stretch">
 			<rectangle>
 				<reportElement x="0" y="0" width="555" height="4" forecolor="#000000" backcolor="#000000"/>
 			</rectangle>
 			<rectangle>
-				<reportElement x="0" y="4" width="555" height="486"/>
+				<reportElement x="0" y="4" width="555" height="464"/>
 			</rectangle>
 			<textField>
-				<reportElement x="10" y="14" width="535" height="36"/>
-				<textElement/>
-				<textFieldExpression class="java.lang.String"><![CDATA["La Comisión Electoral o el Comité Auxiliar de la ciudad de  ____________________ validó los siguientes requisitos para cada uno de los integrantes de la placha:"]]></textFieldExpression>
+				<reportElement x="10" y="14" width="535" height="30"/>
+				<textElement>
+					<font size="11"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA["La Comisión Electoral o el Comité Auxiliar de la ciudad de " +$P{ciudad}.toUpperCase()+ " validó los siguientes requisitos para cada uno de los integrantes de la placha:"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="10" y="397" width="535" height="35"/>
-				<textElement/>
+				<reportElement x="10" y="388" width="535" height="30"/>
+				<textElement>
+					<font size="11"/>
+				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA["Una vez revisados los requisitos para la inscripción de la plancha, se concluye con base en lo establecido en el Artículo 99 del Estatuto Social de la Cooperativa que: "]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="10" y="444" width="535" height="27"/>
-				<textElement verticalAlignment="Top"/>
-				<textFieldExpression class="java.lang.String"><![CDATA["Todos los integrantes Cumplen ___" +
-"Alguno de los integrantes No Cumple ___ "]]></textFieldExpression>
+				<reportElement x="10" y="430" width="535" height="27"/>
+				<textElement verticalAlignment="Top">
+					<font size="11"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{observaciones}.isEmpty() ? "Todos los integrantes Cumplen." : "Alguno de los integrantes No Cumple."]]></textFieldExpression>
 			</textField>
 			<rectangle>
-				<reportElement x="0" y="490" width="555" height="88"/>
+				<reportElement x="0" y="468" width="555" height="88"/>
 			</rectangle>
-			<textField>
-				<reportElement x="10" y="490" width="535" height="22" forecolor="#C0C0C0"/>
-				<textElement verticalAlignment="Middle"/>
-				<textFieldExpression class="java.lang.String"><![CDATA["Observaciones: En caso de no cumplir, especificar quién no cumple los requisitos y la causa. "]]></textFieldExpression>
+			<textField isBlankWhenNull="true">
+				<reportElement x="10" y="483" width="535" height="73" forecolor="#C0C0C0"/>
+				<textElement verticalAlignment="Top">
+					<font size="10"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{observaciones} == null ? "" : $P{observaciones}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="10" y="50" width="535" height="20"/>
-				<textElement/>
+				<reportElement x="10" y="50" width="535" height="15"/>
+				<textElement>
+					<font size="10"/>
+				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA["1.        Ser asociado hábil de COOMEVA. "]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="10" y="70" width="535" height="20"/>
-				<textElement/>
+				<reportElement x="10" y="70" width="535" height="15"/>
+				<textElement>
+					<font size="10"/>
+				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA["2.        Acreditar por lo menos:"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="10" y="90" width="535" height="31"/>
-				<textElement/>
+				<reportElement x="10" y="84" width="535" height="30"/>
+				<textElement>
+					<font size="10"/>
+				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA["a) Al momento de la inscripción 120 horas de formación en cooperativismo, de acuerdo con los programas curriculares de educación que la Cooperativa diseñe para sus dirigentes. "]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="10" y="121" width="535" height="92"/>
-				<textElement/>
-				<textFieldExpression class="java.lang.String"><![CDATA["b) Adicionalmente, dentro del año siguiente a su elección, 240 horas de formación de acuerdo con los programas curriculares de educación que la Cooperativa ha diseñado o diseñe para sus dirigentes sobre el funcionamiento de COOMEVA en sus aspectos administrativos, financieros, reglamentarios y legales, entre otros. Si al vencimiento del año siguiente a su elección, no se acreditan las 240 horas aquí previstas, quedará suspendido en su condición de Delegado hasta tanto las acredite. "+
-"En todo caso, la Administración deberá facilitar y garantizar los mecanismos virtuales o presenciales para el cumplimiento las obligaciones señaladas en el presente numeral."]]></textFieldExpression>
+				<reportElement x="10" y="113" width="535" height="65"/>
+				<textElement>
+					<font size="10"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA["b) Adicionalmente, dentro del año siguiente a su elección, 240 horas de formación de acuerdo con los programas curriculares de educación que la Cooperativa ha diseñado o diseñe para sus dirigentes sobre el funcionamiento de COOMEVA en sus aspectos administrativos, financieros, reglamentarios y legales, entre otros. Si al vencimiento del año siguiente a su elección, no se acreditan las 240 horas aquí previstas, quedará suspendido en su condición de Delegado hasta tanto las acredite."]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="10" y="213" width="535" height="20"/>
-				<textElement/>
+				<reportElement x="10" y="211" width="535" height="15"/>
+				<textElement>
+					<font size="10"/>
+				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA["3.        Tener una antigüedad como asociado, de por lo menos tres (3) años."]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="10" y="233" width="535" height="20"/>
-				<textElement/>
+				<reportElement x="10" y="229" width="535" height="15"/>
+				<textElement>
+					<font size="10"/>
+				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA["4.        Acreditar título en su respectiva profesión u oficio con una anterioridad mínima a tres (3) años."]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="10" y="253" width="535" height="32"/>
-				<textElement/>
+				<reportElement x="10" y="247" width="535" height="30"/>
+				<textElement>
+					<font size="10"/>
+				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA["5.        No haber sido sancionado por la Cooperativa, durante los cinco (5) años anteriores a la nominación, con suspensión o pérdida de sus derechos sociales, de acuerdo con lo establecido en el Estatuto Social de Coomeva."]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="10" y="285" width="535" height="33"/>
-				<textElement/>
+				<reportElement x="10" y="280" width="535" height="30"/>
+				<textElement>
+					<font size="10"/>
+				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA["6.        No haber sido sancionado en los últimos cinco (5) años con multa o con suspensión, destitución o remoción del cargo por un organismo de control estatal o de control en el ejercicio de su profesión."]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="10" y="318" width="535" height="34"/>
-				<textElement/>
+				<reportElement x="10" y="313" width="535" height="30"/>
+				<textElement>
+					<font size="10"/>
+				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA["7.        No haber sido empleado o promotor o corredor de COOMEVA o de las empresas que conforman su Grupo Empresarial Cooperativo, durante los tres (3) años inmediatamente anteriores al de la respectiva elección."]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="10" y="352" width="535" height="32"/>
-				<textElement/>
+				<reportElement x="10" y="346" width="535" height="30"/>
+				<textElement>
+					<font size="10"/>
+				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA["8.        No estar incurso en las inhabilidades e incompatibilidades que establezca la ley y el Estatuto Social de Coomeva."]]></textFieldExpression>
 			</textField>
+			<staticText>
+				<reportElement x="10" y="177" width="535" height="30"/>
+				<textElement>
+					<font size="10"/>
+				</textElement>
+				<text><![CDATA[En todo caso, la Administración deberá facilitar y garantizar los mecanismos virtuales o presenciales para el cumplimiento las obligaciones señaladas en el presente numeral."]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="10" y="469" width="100" height="15" forecolor="#009232"/>
+				<textElement>
+					<font size="10"/>
+				</textElement>
+				<text><![CDATA[Observaciones:]]></text>
+			</staticText>
 		</band>
 	</detail>
 	<columnFooter>
 		<band height="50">
 			<staticText>
-				<reportElement x="454" y="31" width="101" height="19" forecolor="#000000"/>
-				<textElement textAlignment="Right"/>
+				<reportElement x="420" y="31" width="135" height="19" forecolor="#009332"/>
+				<textElement textAlignment="Right">
+					<font size="10"/>
+				</textElement>
 				<text><![CDATA[Mod.Septiembre 2021]]></text>
 			</staticText>
 			<rectangle>
 				<reportElement x="-21" y="0" width="595" height="31" forecolor="#009205" backcolor="#009205"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="0" y="31" width="100" height="19" forecolor="#000000"/>
-				<textElement/>
+				<reportElement x="0" y="31" width="100" height="19" forecolor="#009332"/>
+				<textElement>
+					<font size="10"/>
+				</textElement>
 				<text><![CDATA[CO-FT-176]]></text>
 			</staticText>
 			<staticText>
